Fix CV text on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 
 @import url(https://fonts.googleapis.com/css?family=Lato:400,300,700);
 
-html, body{
+html, body {
 	font-family: 'Lato', sans-serif;
 }
 
@@ -134,6 +134,7 @@ header .links a:hover {
 }
 
 .home section.welcome .cv p {
+	width: 500px;
 	font-size: 20px;
 	color: rgba(0,0,0,0.7);
 	line-height: 25px;
